force-app/main/default/objects/RTL_Deleted_Campaign_Member__c/RTL_Deleted_Campaign_Member__c.object-meta.xml
<CustomObject>
    <description>Keep removed campaign member records</description>
    <label>Deleted Campaign Member History</label>
    <nameField>
        <displayFormat>CMH-{0000}</displayFormat>
        <label>Campaign Member History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Campaign Member History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>