force-app/main/default/objects/RTL_Deleted_Campaign_Member__c/fields/RTL_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>