force-app/main/default/objects/RTL_Deleted_Campaign_Member__c/fields/RTL_Deleted__c.field-meta.xml
<CustomField>
    <fullName>RTL_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>