force-app/main/default/objects/RTL_Deleted_Campaign_Member__c/fields/RTL_Deleted_Time__c.field-meta.xml
<CustomField>
    <fullName>RTL_Deleted_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deleted Time</label>
    <type>DateTime</type>
</CustomField>