force-app/main/default/objects/RTL_Deleted_Campaign_Member__c/fields/RTL_Marketing_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Marketing_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>